footer bottom edited 1.3.5

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -497,6 +497,7 @@ h2.title {
 .footer__bottom {
   width: 100%;
   background-color: #282828;
+  text-align: center;
 
   .mobile {
     display: none;
